Fixed small spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,10 @@ br {
   }
 }
 
+.button-spacer {
+  padding-top: 5%;
+}
+
 .technologies {
   display: flex;
   flex-direction: row;
